--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
 /.vs
+InventoryManager/bin/Debug/net5.0/config.json
+InventoryManager/bin/Debug/net5.0/Inventory.json
+InventoryManager/bin/Debug/net5.0/InventoryManager.deps.json
+InventoryManager/bin/Debug/net5.0/InventoryManager.dll
+InventoryManager/bin/Debug/net5.0/InventoryManager.exe
+InventoryManager/bin/Debug/net5.0/InventoryManager.pdb
+InventoryManager/bin/Debug/net5.0/InventoryManager.runtimeconfig.dev.json
+InventoryManager/bin/Debug/net5.0/InventoryManager.runtimeconfig.json
+InventoryManager/bin/Debug/net5.0/Newtonsoft.Json.dll
+InventoryManager/bin/Debug/net5.0/Program.cs
+InventoryManager/bin/Debug/net5.0/ref/InventoryManager.dll
+InventoryManager/bin/Debug/netcoreapp3.1/config.json
+InventoryManager/bin/Debug/netcoreapp3.1/Inventory.json
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.deps.json
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.dll
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.exe
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.pdb
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.runtimeconfig.dev.json
+InventoryManager/bin/Debug/netcoreapp3.1/InventoryManager.runtimeconfig.json
+InventoryManager/bin/Debug/netcoreapp3.1/Newtonsoft.Json.dll
+InventoryManager/bin/Debug/netcoreapp3.1/Outboundlog.json
+InventoryManager/bin/Debug/netcoreapp3.1/Program.cs
+InventoryManager/bin/Debug/netcoreapp3.1/History/20211005.json
+InventoryManager/bin/Release/net5.0/config.json
+InventoryManager/bin/Release/net5.0/Inventory.json
+InventoryManager/bin/Release/net5.0/InventoryManager.deps.json
+InventoryManager/bin/Release/net5.0/InventoryManager.dll
+InventoryManager/bin/Release/net5.0/InventoryManager.exe
+InventoryManager/bin/Release/net5.0/InventoryManager.pdb
+InventoryManager/bin/Release/net5.0/InventoryManager.runtimeconfig.dev.json
+InventoryManager/bin/Release/net5.0/InventoryManager.runtimeconfig.json
+InventoryManager/bin/Release/net5.0/Newtonsoft.Json.dll
+InventoryManager/bin/Release/net5.0/Program.cs
+InventoryManager/bin/Release/net5.0/History/20211006.json
+InventoryManager/bin/Release/net5.0/publish/config.json
+InventoryManager/bin/Release/net5.0/publish/Inventory.json
+InventoryManager/bin/Release/net5.0/publish/InventoryManager.deps.json
+InventoryManager/bin/Release/net5.0/publish/InventoryManager.dll
+InventoryManager/bin/Release/net5.0/publish/InventoryManager.exe
+InventoryManager/bin/Release/net5.0/publish/InventoryManager.pdb
+InventoryManager/bin/Release/net5.0/publish/InventoryManager.runtimeconfig.json
+InventoryManager/bin/Release/net5.0/publish/Newtonsoft.Json.dll
+InventoryManager/bin/Release/net5.0/publish/Program.cs
+InventoryManager/bin/Release/net5.0/ref/InventoryManager.dll
